syntax = "proto3";

import "types.account.proto";

package service_account;
option go_package="app/adapters/protobuf";

message RequestAccountInsert {
 uint64 id = 1;
 string name = 2;
 float balance = 3;
}

message ResponseAccountInsert {
 uint32 code = 1; // 201, 500
	string status = 2; // success, failed
}

message RequestAccountFind {
 uint64 id = 1;
}

message ResponseAccountFind {
 uint32 code = 1; // 200, 404, 500
	string status = 2; // success, failed
	Account data = 3;
}

message RequestAccountGet {
 // FilterAccount filter = 1;
}

// message FilterAccount {
// 	int32 id = 1;
// }

message ResponseAccountGet {
 uint32 code = 1; // 200, 500
	string status = 2; // success, failed
	repeated Account data = 3;
}

message RequestAccountUpdate {
 Find find = 1;
	Account data = 2;
}

message ResponseAccountUpdate {
 uint32 code = 1; // 202 Accepted, 500 Internal Service Error
	string status = 2; // success, failed
}

message RequestAccountDelete {
 Find find = 1;
}

message ResponseAccountDelete {
 uint32 code = 1; // 202 Accepted, 500 Internal Service Error
	string status = 2; // success, failed
}

service ApiAccount {
	rpc Insert(RequestAccountInsert) returns (ResponseAccountInsert){};
	rpc Find(RequestAccountFind) returns (ResponseAccountFind){};
	rpc Get(RequestAccountGet) returns (ResponseAccountGet){};
	rpc Update(RequestAccountUpdate) returns (ResponseAccountUpdate){};
	rpc Delete(RequestAccountDelete) returns (ResponseAccountDelete){};
}